# Shopping_Agent

./: connection.py  main.py  pyproject.toml  pyvenv.cfg
